syntax = "proto3";

package calculator;

service Calculator {
  rpc Add(CalculationRequest) returns (CalculationResponse);
  rpc Divide(CalculationRequest) returns (CalculationResponse);
}

message CalculationRequest {
  int64 a = 1;
  int64 b = 2;
}

message CalculationResponse {
  int64 result = 1;
}


service Admin {
  rpc GetRequestCount(GetCountRequest) returns (GetCountResponse);
}

message GetCountRequest {}

message GetCountResponse {
  uint64 count = 1;
}